Added profile score leaderboard

--- a/public/app/header/homeHeader.htm
+++ b/public/app/header/homeHeader.htm
@@ -17,6 +17,11 @@
 				        </i>
 				    </a>
 				</li>
+				<li>
+					<a class="waves-effect" ng-href="#/leaderboard">
+						<i class="mdi-action-bookmark-outline grey-text text-lighten-4"></i>
+					</a>
+				</li>
 				<li ng-if="$root.profile.$id">
 				    <a class="dropdown-button waves-effect" data-activates="quicklinksDropdown" ng-click="">
 				        <i class="mdi-navigation-more-vert grey-text text-lighten-4"></i>
