(refactor): move most in-line styles to tournaments.css

--- a/public/app/event/modalPlayer.htm
+++ b/public/app/event/modalPlayer.htm
@@ -1,10 +1,9 @@
 <div id="playerModal" class="modal modal-fixed-footer">
 	<div id="playerModalContent" class="modal-content">
-		<a class="grey-text text-darken-4 hoverable" ng-click="event.goToPlayerProfile(event.focusPlayer)" style="cursor: pointer;">
-			<h4 class="truncate" style="line-height: 2.9rem;">
+		<a class="grey-text text-darken-4 hoverable" ng-click="event.goToPlayerProfile(event.focusPlayer)">
+			<h4 class="player-modal-name truncate">
 			    <img ng-src="{{event.avatarData[event.focusPlayer]}}"
-			         class="circle z-depth-1"
-			         style="width: 42px; vertical-align: sub; height: 42px; margin-right: 9px;">
+			         class="circle z-depth-1 player-modal-avatar">
 			    {{ event.focusPlayer }}
 			</h4>
 		</a>
@@ -19,7 +18,7 @@
 			<table class="responsive-table hoverable" ng-if="event.playerScores.length > 0">
 
 				<thead>
-					<tr class="grey-text text-darken-1" style="font-weight: normal;">
+					<tr class="grey-text text-darken-1">
 						<th>Position</th>
 						<th>Game</th>
 						<th>Score</th>
@@ -35,7 +34,7 @@
 					               'text-darken-4':  scoreData.pointsEarned > 0}">
 						<td>{{ scoreData.position }}</td>
 						<td>
-						    <a ng-click="event.openGameModalFromPlayerModal(scoreData.camelName)" class="hoverable" style="cursor: pointer;">
+						    <a ng-click="event.openGameModalFromPlayerModal(scoreData.camelName)" class="hoverable">
 						        {{ scoreData.name }}
 						    </a>
 						</td>
@@ -44,7 +43,6 @@
 						<td>
 							<a ng-attr-href="{{ 'http://' + scoreData.twitchUrl }}" 
 							   class="grey-text hoverable"
-							   style="cursor: pointer;" 
 							   ng-class="{'text-lighten-1': scoreData.pointsEarned === 0,
 					                      'text-darken-4':  scoreData.pointsEarned > 0}"
 							   ng-show="scoreData.twitchUrl">
@@ -52,8 +50,7 @@
 						    </a>
 
 						    <a ng-attr-href="{{ 'http://' + scoreData.inpUrl }}" 
-						       class="grey-text hoverable" 
-						       style="cursor: pointer;"
+						       class="grey-text hoverable"
 						       ng-class="{'text-lighten-1': scoreData.pointsEarned === 0,
 					                      'text-darken-4':  scoreData.pointsEarned > 0}"
 						       ng-show="scoreData.inpUrl">
