--- a/public/app/eventComponents/stickyMessage.directive.htm
+++ b/public/app/eventComponents/stickyMessage.directive.htm
@@ -7,4 +7,4 @@
 	</div>
 </div>
 
-<div ng-if="vm.properties.sticky" class="divider" style="margin-bottom: 24px; margin-top: 30px;"></div>
+<div ng-if="vm.properties.sticky" class="divider bottom25 top30"></div>
