--- a/public/app/home/avatar.htm
+++ b/public/app/home/avatar.htm
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -50px;" ng-init="avatar.initAvatar()">
+<div class="container" ng-init="avatar.initAvatar()">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
@@ -23,10 +23,10 @@
 					     ngf-accept="'image/*'" ngf-max-size='300000'>
 
 					     <img ng-if="!avatar.file[0]" ng-attr-src="{{ avatar.avatarData[$root.profile.userName] }}"
-					          class="drop-avatar" style="margin-left: -3px; margin-top: -3px; padding: 3px;">
+					          class="drop-avatar" style="margin-left: -3px; padding: 5px;">
 
 					     <img ng-if="avatar.file[0]" ngf-src="avatar.file[0]" class="drop-avatar"
-					          style="margin-left: -3px; margin-top: -3px; padding: 3px;">
+					          style="margin-left: -3px;">
 
 					</div>
 				</div>
