--- a/public/app/home/home.htm
+++ b/public/app/home/home.htm
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -50px;">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
@@ -13,7 +13,7 @@
 				</p>
 			</div>
 
-			<div class="divider" style="margin-top: 28px; margin-bottom: 18px;"></div>
+			<div class="divider top30 bottom20"></div>
 
 			<div class="s12">
 				<span class="flow-text grey-text text-darken-4">
@@ -50,7 +50,7 @@
 				</ul>
 			</div>
 
-			<div class="divider" style="margin-top: 40px; margin-bottom: 20px;"></div>
+			<div class="divider bottom20 top40"></div>
 
 			<div class="s12">
 				<span class="flow-text grey-text text-darken-4">
