--- a/public/app/event/main.htm
+++ b/public/app/event/main.htm
@@ -6,18 +6,16 @@
 <ng-include src="'./app/event/modalSubmit.htm'"></ng-include>
 <ng-include src="'./app/event/modalManagement.htm'"></ng-include>
 
-<div class="container" style="margin-top: -50px;" ng-init="event.initEvent()">
+<div class="container" ng-init="event.initEvent()">
 	
 	<div class="card grey lighten-4 z-depth-2">
 
 		<!-- Event Navbar -->
-		<nav>
+		<nav class="event-nav">
 			<div class="nav-wrapper grey-text text-lighten-4" 
-			     ng-class="event.eventProperties.color" 
-			     style="padding-left: 20px; padding-right: 20px;">
-				<a ng-click="" class="brand-logo truncate" style="font-size: 1.6rem;">
-					<i class="mdi-action-turned-in-not small" 
-					   style="display: inline-block; vertical-align: sub;"
+			     ng-class="event.eventProperties.color">
+				<a ng-click="" class="brand-logo truncate">
+					<i class="mdi-action-turned-in-not small"
 					   ng-if="event.eventProperties.premier"></i>
 				    {{ event.eventProperties.name }}
 				</a>
@@ -25,22 +23,19 @@
 				<ul class="right">
 					<li ng-if="event.eventProperties.state !== 'concluded'">
 						<a class="waves-effect waves-light"
-						   ng-click="event.openManagementModal()"
-						   style="cursor: pointer;">
+						   ng-click="event.openManagementModal()">
 						    <span class="grey-text text-lighten-4">Management</span>
 						</a>
 					</li>
 					<li ng-if="event.eventProperties.state !== 'upcoming'">
 					    <a class="waves-effect waves-light" 
-					       ng-click="event.openRulesModal()" 
-					       style="cursor: pointer;">
+					       ng-click="event.openRulesModal()">
 					        <span class="grey-text text-lighten-4">Rules</span>
 					    </a>
 					</li>
 					<li ng-if="event.eventProperties.premier">
 					    <a class="waves-effect waves-light"
-					       ng-click="event.openBadgesModal()"
-					       style="cursor: pointer;">
+					       ng-click="event.openBadgesModal()">
 					        <span class="grey-text text-lighten-4">Badges</span>
 					    </a>
 					</li>
@@ -74,7 +69,7 @@
 
 			<div class="row">
 			    <div class="col s12">
-			        <div class="divider" style="margin-bottom: 16px; margin-top: 30px;"></div>
+			        <div class="divider bottom15 top30"></div>
 			    </div>
 			</div>
 
