--- a/public/app/event/modalManagement.htm
+++ b/public/app/event/modalManagement.htm
@@ -2,11 +2,11 @@
 	<div id="managementModalContent" class="modal-content">
 		<h4 class="truncate">Management</h4>
 
-		<div class="divider" style="margin-bottom: 1rem;"></div>
+		<div class="divider bottom15"></div>
 
 		<div class="row">
 			<div class="col s12">
-				<ul class="tabs" style="margin-bottom: 1rem;">
+				<ul class="tabs bottom15">
 					<li class="tab col s3"><a class="active waves-effect waves-teal" href="#tabTeams">Teams</a></li>
 					<li class="tab col s3"><a class="waves-effect waves-teal" href="#tabPlayers">Players</a></li>
 					<li class="tab col s3"><a class="waves-effect waves-teal" href="#tabGames">Games</a></li>
@@ -18,9 +18,9 @@
 			<div id="tabTeams" class="col s12 animate fadeIn">
 
 				<!-- Team Editing -->
-			    <div class="row" style="margin-top: 0.5rem;">
+			    <div class="row top5">
 			    	<span class="s12 flow-text grey-text text-darken-4">Edit Team</span>
-			    	<p class="s12 grey-text text-darken-1" style="margin-top: 0">
+			    	<p class="s12 grey-text text-darken-1 top0">
 			    	    This is a test description.
 			    	</p>
 			    </div>
@@ -34,7 +34,7 @@
 
 			    	<span class="s12 flow-text grey-text text-darken-4">Create Team</span>
 
-			    	<p class="s12 grey-text text-darken-1" style="margin-top: 0">
+			    	<p class="s12 grey-text text-darken-1 top0">
 			    		Use this form to add a team to the event. Once a team has been added, players
 			    		will be able to join the team from the tournament's registration page.
 			    	</p>
