--- a/public/app/event/modalRules.htm
+++ b/public/app/event/modalRules.htm
@@ -11,7 +11,7 @@
 			<p class="grey-text text-darken-4">
 				{{ rule.content }}
 			</p>
-			<div class="divider" style="margin-bottom: 24px; margin-top: 30px;" ng-if="!$last" ng-repeat-end></div>
+			<div class="divider bottom25 top30" ng-if="!$last" ng-repeat-end></div>
 		</div>
 
 		<div class="section" ng-if="event.eventProperties.length === 0">
