--- a/public/app/event/modalSubmit.htm
+++ b/public/app/event/modalSubmit.htm
@@ -22,7 +22,7 @@
 					<span class="grey-text text-darken-1">{{ badge.description }}</span>
 				</li>
 			</ul>
-			<div class="divider" style="margin-bottom: 24px; margin-top: 30px;" ng-if="!$last" ng-repeat-end></div>
+			<div class="divider bottom25 top30" ng-if="!$last" ng-repeat-end></div>
 		</div>
 
 		<div class="section" ng-if="event.eventProperties.badges.length === 0">
