--- a/public/app/eventComponents/multiGameLeaderboard.directive.htm
+++ b/public/app/eventComponents/multiGameLeaderboard.directive.htm
@@ -28,4 +28,4 @@
 	</div>
 </div>
 
-<div class="divider" style="margin-bottom: 24px; margin-top: 30px;"></div>
+<div class="divider bottom25 top30"></div>
