--- a/public/app/eventComponents/singleGameLeaderboard.directive.htm
+++ b/public/app/eventComponents/singleGameLeaderboard.directive.htm
@@ -20,7 +20,6 @@
 			<td>
 				<img ng-attr-src="{{ vm.avatarData[scoreData.$id] }}" class="avatar circle z-depth-1">
 			    <a class="hoverable"
-			       style="cursor: pointer;"
 			       ng-href="{{ '#/profile/' + scoreData.$id }}">
 			        {{ scoreData.$id }}
 			    </a>
@@ -36,7 +35,6 @@
 
 			    <a ng-attr-href="{{ 'http://' + scoreData.inpUrl }}" 
 			       class="grey-text text-darken-4 hoverable" 
-			       style="cursor: pointer;"
 			       ng-show="scoreData.inpUrl">
 			    	<i class="fa fa-lg fa-file-video-o"></i>&nbsp;<span>{{ scoreData.mameVersion | lowercase }}</span>
 			    </a>
@@ -46,4 +44,4 @@
 
 </table>
 
-<div class="divider" style="margin-bottom: 24px; margin-top: 30px;"></div>
+<div class="divider bottom25 top30"></div>
