--- a/public/app/home/changePassword.htm
+++ b/public/app/home/changePassword.htm
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -50px;">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
