--- a/public/app/home/leaderboard.htm
+++ b/public/app/home/leaderboard.htm
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -50px;">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
@@ -22,7 +22,7 @@
 					<table class="responsive-table hoverable" ng-if="leaderboard.avatarData && leaderboard.profileScoreData">
 
 						<thead>
-							<tr class="grey-text text-darken-1" style="font-weight: normal;">
+							<tr class="grey-text text-darken-1">
 								<th>Position</th>
 								<th>Player</th>
 								<th>Score</th>
@@ -36,7 +36,6 @@
 								<td>
 									<img ng-attr-src="{{ leaderboard.avatarData[scoreData.$id] }}" class="avatar circle z-depth-1">
 								    <a class="hoverable"
-								       style="cursor: pointer;"
 								       ng-href="{{ '#/profile/' + scoreData.$id }}">
 								        {{ scoreData.$id }}
 								    </a>
