--- a/public/app/home/profile.htm
+++ b/public/app/home/profile.htm
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: -50px;" ng-init="profile.initProfile()">
+<div class="container" ng-init="profile.initProfile()">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
@@ -8,8 +8,7 @@
 					<span class="col s12 flow-text grey-text text-darken-4">
 						{{ profile.profileData.userName }}
 						<img ng-attr-src="{{ profile.avatarData[profile.profileData.userName] }}" 
-					         class="z-depth-1 circle"
-					         style="overflow: hidden; display: inline-block; vertical-align: middle; margin-left: 10px; width: 42px; height: 42px;">
+					         class="z-depth-1 circle profile-avatar">
 					</span>
 					<p ng-if="profile.profileData.role === 'Admin' && profile.profileData.userName === 'WCopeland'" 
 					   class="col s12 grey-text text-darken-1">
@@ -21,7 +20,7 @@
 				</div>
 			</div>
 
-			<div class="divider" ng-if="profile.profileData.role !== 'Admin'" style="margin-bottom: 24px; margin-top: 30px;"></div>
+			<div class="divider bottom25 top30" ng-if="profile.profileData.role !== 'Admin'"></div>
 
 			<div class="row" ng-if="profile.profileData.role !== 'Admin'">
 				<div class="col s12">
@@ -62,7 +61,7 @@
 				</div>
 			</div>
 
-			<div class="divider" style="margin-bottom: 24px; margin-top: 30px;"></div>
+			<div class="divider bottom25 top30"></div>
 
 			<div class="row">
 				<div class="col s12">
