--- a/public/index.htm
+++ b/public/index.htm
@@ -38,7 +38,7 @@
 						<li class="hide-on-med-and-up"><a ui-sref="home"><i class="mdi-action-home grey-text text-lighten-4"></i></a></li>
 					</ul>
 					
-					<a ui-sref="home" class="hide-on-small-only brand-logo grey-text text-lighten-4" style="padding-left: 20px;">tournament.vg</a>
+					<a ui-sref="home" class="hide-on-small-only brand-logo grey-text text-lighten-4 left20">tournament.vg</a>
 					
 					<ul class="right">
 
@@ -77,7 +77,7 @@
 	</header>
 
 	<main>
-		<div id="contentView" ui-view class="animate enter-fadeInDown exit-fadeOut" style="position: absolute; width: 100%;"></div>
+		<div id="contentView" ui-view class="animate enter-fadeInDown exit-fadeOut main-content-card"></div>
 	</main>
 
 	<script type="text/javascript" src="dist/js/vendor.js"></script>
