--- a/public/index.htm
+++ b/public/index.htm
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="nz-animate/dist/nzAnimate.min.css">
 
 	<!-- Site Stylesheet -->
-	<link rel="stylesheet" href="tournaments.css">
+	<link rel="stylesheet" href="dist/css/main.min.css">
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
