(refactor): remove ng-init on state partial files

--- a/public/app/event/main.htm
+++ b/public/app/event/main.htm
@@ -6,7 +6,7 @@
 <ng-include src="'./app/event/modalSubmit.htm'"></ng-include>
 <ng-include src="'./app/event/modalManagement.htm'"></ng-include>
 
-<div class="container" ng-init="event.initEvent()">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 
