--- a/public/app/home/avatar.htm
+++ b/public/app/home/avatar.htm
@@ -1,4 +1,4 @@
-<div class="container" ng-init="avatar.initAvatar()">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
@@ -10,7 +10,7 @@
 					</span>
 					<p class="col s12 grey-text text-darken-1">
 						If your profile score is at least 20, you can upload a custom avatar that others will see throughout the site.
-						Simply drag and drop your image into the dotted circle below. Your avatar will automatically
+						Simply drag and drop your image into the circle below. Your avatar will automatically
 						be converted into a circle. Please ensure your file is less than or equal to 300kb in size.
 					</p>
 				</div>
