--- a/public/app/home/profile.htm
+++ b/public/app/home/profile.htm
@@ -1,4 +1,4 @@
-<div class="container" ng-init="profile.initProfile()">
+<div class="container">
 	
 	<div class="card grey lighten-4 z-depth-2">
 		<div class="card-content">
