--- a/public/app/event/modals/modalGameScores.htm
+++ b/public/app/event/modals/modalGameScores.htm
@@ -45,7 +45,7 @@
 						<td>{{ $index + 1 }}</td>
 						<td>
 						    <a class="hoverable"
-						       ng-click="event.openPlayerModalFromGameModal(scoreData.$id)">
+						       ng-click="event.openPlayerModal(scoreData.$id)">
 						        {{ scoreData.$id }}
 						    </a>
 						</td>
