--- a/public/app/eventComponents/multiGameLeaderboard.directive.htm
+++ b/public/app/eventComponents/multiGameLeaderboard.directive.htm
@@ -4,7 +4,7 @@
 			Leaderboard
 			<a ng-if="vm.completeLength > 8"
 			   class="btn-floating waves-effect waves-light blue-grey" 
-			   ng-click="vm.openLeaderboardFunction()">
+			   ng-click="vm.openModalFunction('#leaderboardModal')">
 			    <i class="mdi-action-open-in-new"></i>
 			</a>
 
