--- a/public/app/event/modals/modalPlayer.htm
+++ b/public/app/event/modals/modalPlayer.htm
@@ -34,7 +34,7 @@
 					               'text-darken-4':  scoreData.pointsEarned > 0}">
 						<td>{{ scoreData.position }}</td>
 						<td>
-						    <a ng-click="event.openGameModalFromPlayerModal(scoreData.camelName)" class="hoverable">
+						    <a ng-click="event.openGameModal(scoreData.camelName)" class="hoverable">
 						        {{ scoreData.name }}
 						    </a>
 						</td>
