(refactor): move event component-specific code to the controllers in those components themselves

--- a/public/app/eventComponents/gamesList.directive.htm
+++ b/public/app/eventComponents/gamesList.directive.htm
@@ -5,8 +5,8 @@
 		</span>
 	</div>
 
-	<div class="col l4 s6" ng-repeat="game in vm.data | orderBy:'name'">
-		<a class="modal-trigger" ng-click="vm.openGameFunction(game.camelName)">
+	<div class="col l4 s6" ng-repeat="game in event.gameList | orderBy:'name'">
+		<a class="modal-trigger" ng-click="event.openGameModal(game.camelName)">
 			<div class="card-panel hoverable z-depth-1 grey lighten-2 waves-effect waves-teal" style="height: 90px; width: 100%;">
 				<div class="row valign-wrapper">
 					<div class="col s12">
