--- a/public/app/eventComponents/multiGameLeaderboard.directive.htm
+++ b/public/app/eventComponents/multiGameLeaderboard.directive.htm
@@ -2,24 +2,24 @@
 	<div class="col s12">
 		<span class="flow-text grey-text text-darken-4">
 			Leaderboard
-			<a ng-if="vm.completeLength > 8"
+			<a ng-if="event.completeLength > 8"
 			   class="btn-floating waves-effect waves-light blue-grey" 
-			   ng-click="vm.openModalFunction('#leaderboardModal')">
+			   ng-click="event.openMultiGameLeaderboardModal()">
 			    <i class="mdi-action-open-in-new"></i>
 			</a>
 
-			<a ng-if="vm.completeLength < 8"
+			<a ng-if="event.completeLength < 8"
 			   class="btn-floating disabled">
 			    <i class="mdi-action-open-in-new"></i>
 			</a>
 		</span>
 
 		<ul class="collection z-depth-1">
-			<a ng-click="vm.openPlayerFunction(playerData.key)" 
-			   ng-repeat="playerData in vm.data">
+			<a ng-click="event.openPlayerModal(playerData.key)" 
+			   ng-repeat="playerData in event.summarizedLeaderboard">
 				<li class="waves-effect waves-teal collection-item avatar hoverable" 
 				    style="height: 62px; width: 100%">
-				    <img ng-attr-src="{{ vm.avatarData[playerData.key] }}" class="circle z-depth-1">
+				    <img ng-attr-src="{{ event.avatarData[playerData.key] }}" class="circle z-depth-1">
 					<span class="title grey-text text-darken-4">{{ playerData.key }}</span><br>
 					<span class="grey-text text-darken-1">{{ playerData.position | ordinal }} &ndash; {{ playerData.points }}</span>
 				</li>
