(fix): twitch urls should open another tab. ensure Materialize inits work on slow connections until a better workaround is implemented for init issues.

--- a/public/app/event/modals/modalGameScores.htm
+++ b/public/app/event/modals/modalGameScores.htm
@@ -56,7 +56,8 @@
 							   class="grey-text hoverable"
 							   ng-class="{'text-lighten-1': event.determinePoints(scoreData, $index) === 0,
 					                      'text-darken-4':  event.determinePoints(scoreData, $index) > 0}"
-							   ng-show="scoreData.twitchUrl">
+							   ng-show="scoreData.twitchUrl"
+							   target="_blank">
 						        <i class="fa fa-lg fa-twitch"></i>&nbsp;
 						    </a>
 
