--- a/public/app/event/modals/modalPlayer.htm
+++ b/public/app/event/modals/modalPlayer.htm
@@ -45,7 +45,8 @@
 							   class="grey-text hoverable"
 							   ng-class="{'text-lighten-1': scoreData.pointsEarned === 0,
 					                      'text-darken-4':  scoreData.pointsEarned > 0}"
-							   ng-show="scoreData.twitchUrl">
+							   ng-show="scoreData.twitchUrl"
+							   target="_blank">
 						        <i class="fa fa-lg fa-twitch"></i>&nbsp;
 						    </a>
 
