--- a/public/app/event/modals/modalManagement.htm
+++ b/public/app/event/modals/modalManagement.htm
@@ -50,7 +50,7 @@
 			    		will be able to join the team from the tournament's registration page.
 			    	</p>
 
-			    	<form name="newTeamForm">
+			    	<form name="newTeamForm" novalidate>
 
 				    	<div class="input-field col s12 m6">
 							<input id="newTeamFormalName" 
