--- a/public/app/home/home.htm
+++ b/public/app/home/home.htm
@@ -20,13 +20,13 @@
 					Upcoming Events
 				</span>
 				<ul class="collection z-depth-1">
-					<a href="">
-						<li class="collection-item grey marker lighten-4" style="width: 100%; cursor: default;">
+					<a href="#/event/igby2/main">
+						<li class="hoverable collection-item marker waves-effect waves-teal" style="width: 100%;">
 							<div class="swatch indigo z-depth-1">
 							    <i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
 							<span class="title grey-text text-darken-4">Internet Gaming Bash of the Year 2</span>
-							<p class="grey-text text-darken-1">TBA</p>
+							<p class="grey-text text-darken-1">July 1st &ndash; August 5th, 2015</p>
 						</li>
 					</a>
 					<a href="">
@@ -58,7 +58,7 @@
 				</span>
 				<ul class="collection z-depth-1">
 					<a href="#/event/crapTournament/main">
-						<li class="hoverable collection-item marker waves-effect" style="width: 100%;">
+						<li class="hoverable collection-item marker waves-effect waves-teal" style="width: 100%;">
 							<div class="swatch brown z-depth-1">
 								<i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
@@ -67,7 +67,7 @@
 						</li>
 					</a>
 					<a href="#/event/intrepidOff/main">
-						<li class="hoverable collection-item marker waves-effect" style="width: 100%;">
+						<li class="hoverable collection-item marker waves-effect waves-teal" style="width: 100%;">
 							<div class="swatch teal z-depth-1"></div>
 							<span class="title grey-text text-darken-4">The Official Intrepid Off</span>
 							<p class="grey-text text-darken-1">May 2nd, 2015</p>
