(feat): add dko#2 to main page

--- a/public/app/home/home.htm
+++ b/public/app/home/home.htm
@@ -30,8 +30,17 @@
 						</li>
 					</a>
 					<a href="">
-						<li class="collection-item grey marker lighten-4" style="width: 100%; cursor: default;">
+						<li class="collection-item marker lighten-4" style="width: 100%; cursor: default;">
 							<div class="swatch red z-depth-1">
+							    <i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
+							</div>
+							<span class="title grey-text text-darken-4">Donkey Kong Online Open #2</span>
+							<p class="grey-text text-darken-1">TBA</p>
+						</li>
+					</a>
+					<a href="">
+						<li class="collection-item grey marker lighten-4" style="width: 100%; cursor: default;">
+							<div class="swatch orange z-depth-1">
 								<i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
 							<span class="title grey-text text-darken-4">NES Gaming Bash of the Year</span>
