--- a/public/app/eventComponents/multiGameLeaderboard.directive.htm
+++ b/public/app/eventComponents/multiGameLeaderboard.directive.htm
@@ -2,13 +2,13 @@
 	<div class="col s12">
 		<span class="flow-text grey-text text-darken-4">
 			Leaderboard
-			<a ng-if="event.completeLength > 8"
+			<a ng-if="event.leaderboardLength > 8"
 			   class="btn-floating waves-effect waves-light blue-grey" 
 			   ng-click="event.openMultiGameLeaderboardModal()">
 			    <i class="mdi-action-open-in-new"></i>
 			</a>
 
-			<a ng-if="event.completeLength < 8"
+			<a ng-if="event.leaderboardLength < 8"
 			   class="btn-floating disabled">
 			    <i class="mdi-action-open-in-new"></i>
 			</a>
