(fix): make rules collapsible a popout collapse

--- a/public/app/eventComponents/rulesDisplay.directive.htm
+++ b/public/app/eventComponents/rulesDisplay.directive.htm
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col s12 l9">
 
-		<ul class="collapsible" data-collapsible="accordion">
+		<ul class="collapsible popout" data-collapsible="accordion">
 			<li ng-repeat="rule in event.eventProperties.rules">
 				<div class="collapsible-header hoverable grey-text text-darken-4 waves-effect waves-teal">
 				    <i ng-class="rule.icon"></i>{{ rule.title }}
