--- a/public/app/home/home.htm
+++ b/public/app/home/home.htm
@@ -7,10 +7,6 @@
 				<span class="flow-text grey-text text-darken-4">
 					Welcome.
 				</span>
-				<p class="grey-text text-darken-1">
-					Pages for IGBY2, NGBY, and MARP T14 will be added soon. Your account from the old
-					Retro Contests site has been migrated to tournament.vg.
-				</p>
 			</div>
 
 			<div class="divider top30 bottom20"></div>
@@ -30,7 +26,7 @@
 						</li>
 					</a>
 					<a href="">
-						<li class="collection-item marker lighten-4" style="width: 100%; cursor: default;">
+						<li class="collection-item grey lighten-3 marker lighten-4" style="width: 100%; cursor: default;">
 							<div class="swatch red z-depth-1">
 							    <i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
@@ -39,7 +35,7 @@
 						</li>
 					</a>
 					<a href="">
-						<li class="collection-item grey marker lighten-4" style="width: 100%; cursor: default;">
+						<li class="collection-item grey lighten-3 marker lighten-4" style="width: 100%; cursor: default;">
 							<div class="swatch orange z-depth-1">
 								<i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
@@ -48,7 +44,7 @@
 						</li>
 					</a>
 					<a href="">
-						<li class="collection-item grey marker lighten-4" style="width: 100%; cursor: default;">
+						<li class="collection-item grey lighten-3 marker lighten-4" style="width: 100%; cursor: default;">
 							<div class="swatch green z-depth-1">
 								<i class="mdi-action-turned-in-not small grey-text text-lighten-4 premier-ribbon"></i>
 							</div>
