(fix): don't include firebase keys when counting team length

--- a/public/app/event/main.htm
+++ b/public/app/event/main.htm
@@ -109,7 +109,7 @@
 							</p>
 
 							<p class="grey-text text-darken-1 center-text" style="text-align: center;">
-								{{ Utils.keys(event.playerPool).length }} players have registered for IGBY2.
+								{{ Utils.keys(event.playerPool).length - 3 }} players have registered for IGBY2.
 							</p>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 							</button>
 
 							<p class="grey-text text-darken-1 center-text" style="text-align: center;">
-								{{ Utils.keys(event.playerPool).length }} players have registered for IGBY2.
+								{{ Utils.keys(event.playerPool).length - 3 }} players have registered for IGBY2.
 							</p>
 
 							<span class="grey-text text-darken-1" ng-if="event.playerPool[$root.profile.$id]">
